--- a/index.html
+++ b/index.html
@@ -14,50 +14,48 @@
       <i class="fa fa-phone-square" aria-hidden="true" style="font-size: 20px">
       </i>
       9876 5432 10 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <i class="fa fa-envelope" aria-hidden="true" style="font-size: 20px"></i>
+      <i class="fa fa-envelope" aria-hidden="true" style="font-size: 20px"> </i>
       manerajeshri@gmail.com
     </header>
     <br />
 
     <nav>
-      <a href="home.html" target="MyFrame">HOME</a>&nbsp;&nbsp;
-      <a href="techStack.html" target="MyFrame">TECHNOLOGY</a>
+      <a href="home.html" target="MyFrame">HOME</a> &nbsp;&nbsp;
+      <a href="techStack.html" target="MyFrame">TECHNOLOGY</a> &nbsp;&nbsp;
+      <a href="education.html" target="MyFrame">EDUCATION </a> &nbsp;&nbsp;
+      <a href="projectDetails.html" target="MyFrame"> PROJECT</a> &nbsp;&nbsp;
+      <a href="hobbies.html" target="MyFrame"> HOBBIES</a> &nbsp;&nbsp;
+      <a href="personal.html" target="MyFrame"> PERSONAL</a> &nbsp;&nbsp;
+      <a href="other.html" target="MyFrame"> OTHERS</a> &nbsp;&nbsp;
     </nav>
+
     <br />
-    <iframe
-      width="900px"
-      height="500px"
-      name="MyFrame"
-      src="home.html"
-    ></iframe>
-    <br /><br />
+    <iframe width="900px" height="500px" name="MyFrame" src="home.html">
+    </iframe>
+    <br />
+
     <footer>
       Follow Me &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="https://www.linkedin.com/"
-        ><i
+      <a href="https://www.linkedin.com/"><i
           class="fa fa-linkedin-square"
           aria-hidden="true"
           style="font-size: 20px"
-        ></i
-      ></a>
+        >
+        </i></a>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
       <a href="https://www.google.co.in/">
-        <i class="fa fa-google" aria-hidden="true" style="font-size: 20px"></i
-      ></a>
+        <i class="fa fa-google" aria-hidden="true" style="font-size: 20px"></i></a>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="https://www.instagram.com/accounts/login/"
-        ><i class="fa fa-instagram" aria-hidden="true" style="font-size: 20px">
-        </i>
-      </a>
+      <a href="https://www.instagram.com/accounts/login/">
+        <i class="fa fa-instagram" aria-hidden="true" style="font-size: 20px"></i></a>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="https://www.facebook.com/login/">
         <i
           class="fa fa-facebook-square"
           aria-hidden="true"
           style="font-size: 20px"
-        ></i>
-      </a>
+        ></i></a>
     </footer>
   </body>
 </html>
