--- a/techStack.html
+++ b/techStack.html
@@ -12,7 +12,8 @@
     </style>
   </head>
   <body>
-    <h3>Technology Stack for Angular Web Development</h3>
+    <!-- <h3>Technology Stack for Angular Web Development</h3> -->
+    <h3>Technology </h3>
     <table>
       <thead></thead>
       <tbody>
