other replaced with contact us
added new file other replaced with contact us and other.html deleted

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href="projectDetails.html" target="MyFrame"> PROJECT</a> &nbsp;&nbsp;
       <a href="hobbies.html" target="MyFrame"> HOBBIES</a> &nbsp;&nbsp;
       <a href="personal.html" target="MyFrame"> PERSONAL</a> &nbsp;&nbsp;
-      <a href="other.html" target="MyFrame"> OTHERS</a> &nbsp;&nbsp;
+      <a href="contactUs.html" target="MyFrame"> CONTACT US</a> &nbsp;&nbsp;
     </nav>
 
     <br />
@@ -36,26 +36,35 @@
 
     <footer>
       Follow Me &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="https://www.linkedin.com/"><i
+      <a href="https://www.linkedin.com/"
+        ><i
           class="fa fa-linkedin-square"
           aria-hidden="true"
           style="font-size: 20px"
         >
-        </i></a>
+        </i
+      ></a>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
       <a href="https://www.google.co.in/">
-        <i class="fa fa-google" aria-hidden="true" style="font-size: 20px"></i></a>
+        <i class="fa fa-google" aria-hidden="true" style="font-size: 20px"></i
+      ></a>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="https://www.instagram.com/accounts/login/">
-        <i class="fa fa-instagram" aria-hidden="true" style="font-size: 20px"></i></a>
+        <i
+          class="fa fa-instagram"
+          aria-hidden="true"
+          style="font-size: 20px"
+        ></i
+      ></a>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="https://www.facebook.com/login/">
         <i
           class="fa fa-facebook-square"
           aria-hidden="true"
           style="font-size: 20px"
-        ></i></a>
+        ></i
+      ></a>
     </footer>
   </body>
 </html>
