adding Color and background color
adding Color and background color for h3

--- a/home.html
+++ b/home.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <h3>Professional Summery</h3>
+    <title>Home</title>
+    <style>
+      h3 {
+        color: brown;
+        background-color: rgb(241, 194, 65);
+      }
+    </style>
   </head>
   <body>
+    <h3>Carrier Objectives</h3>
+    TO WORK IN ORGANIZATION WHERE I CAN LEARN AND GROW MY SKILLS AND HELP
+    ORGANIZATIONAL GROWTH
+    <h3>Professional Summery</h3>
     <ul>
       <li>
         Having 1 years of experience in developing Single page Web Applications
-        using Angular 8, HTML5, CSS3, Bootstrap 5, JavaScript, TypeScript
+        using <span style="color: blue">Angular 8</span>, HTML5, CSS3, Bootstrap
+        5, JavaScript, TypeScript
       </li>
       <li>
         Experience on working with version control system - GIT and GitHub
