--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Index</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <style>
+      h3 {
+        color: brown;
+        background-color: rgb(241, 194, 65);
+      }
+    </style>
   </head>
 
   <body>
-    <header>
+    <header style="color: brown; background-color: rgb(241, 194, 65)">
       <i class="fa fa-user" aria-hidden="true" style="font-size: 20px"> </i>
       Ms.Rajeshri Mane &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <i class="fa fa-phone-square" aria-hidden="true" style="font-size: 20px">
