--- a/personal.html
+++ b/personal.html
@@ -2,12 +2,18 @@
 <html>
   <head>
     <title>Personal Information</title>
+    <style>
+      h3 {
+        color: brown;
+        background-color: rgb(241, 194, 65);
+      }
+    </style>
   </head>
   <body>
-    <h3>Profile Photo:</h3>
+    <h3>Personal Information:</h3>
     <br /><img src="developerWomen.png" width="250px" height="200px" />
     <br /><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <strong>Ms.Rajeshri Mane</strong> <br><br /><strong>Mobile Number:</strong
+    <strong>Ms.Rajeshri Mane</strong> <br /><br /><strong>Mobile Number:</strong
     >&nbsp;9876543210 <br /><strong> Email: </strong
     >&nbsp;manerajeshri@gmail.com <br /><strong> Date of Birth:</strong
     >&nbsp;Feb-10-1989 <br /><strong> Address:</strong>&nbsp;Punawale, Pune
