--- a/projectDetails.html
+++ b/projectDetails.html
@@ -2,6 +2,12 @@
 <html>
 <head>
 <title>Project Details </title>
+<style>
+    h3 {
+      color: brown; 
+      background-color: rgb(241, 194, 65)
+    }
+  </style>
 </head>
 
 <body>
@@ -10,16 +16,15 @@
 <hr>
 <h3>Name: &nbsp;&nbsp;&nbsp;&nbsp; <u>Student Management</u> </h3>
 
-<strong><u> Environment:</u> </strong> <mark> Angular 8, TypeScript, JavaScript (ES6), HTML5, CSS, Bootstrap, GitHub, Desktop GitHub, Agile and JIRA, IDE - VS Code </mark> 
+<strong><u> Environment:</u> </strong> <mark> <span style="color: blue;">Angular 8</span>  , TypeScript, JavaScript (ES6), HTML5, CSS, Bootstrap, GitHub, Desktop GitHub, Agile and JIRA, IDE - VS Code </mark> 
 <br> <br>
 <b>Team Size:</b>07  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>Duration: </b><i>2021-1<sup>st</sup> -Juy till <u> present </u> </i>
 <br> <br>
-<b>Project Description:</b>This project is mainly used for student management in colleges, where It help to manage student record like<br> student registration, student update information and to see all his or her academic activities like score card, attendance. <br>   
-<br>
+<b>Project Description:</b>This project is mainly used for student management in colleges, where It help to manage student record like<br> student registration, student update information and to see all his or her academic activities like score card, attendance. <br> 
 <hr>
 
-<b>Roles and Responsibilities:  </b><br>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Designed and implemented the user interface using HTML5 and CSS
+<h3>Roles and Responsibilities:  </h3>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Designed and implemented the user interface using HTML5 and CSS
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Work closely with backend developers for code integration
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Identifying and troubleshooting issues with front end code
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Worked on GIT as a version control
