--- a/contactUs.html
+++ b/contactUs.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <title>Contact Us</title>
+    <style>
+      h3 {
+        color: brown;
+        background-color: rgb(241, 194, 65);
+      }
+    </style>
   </head>
   <body>
     <h3>Contact Us</h3>
