--- a/education.html
+++ b/education.html
@@ -8,7 +8,13 @@
       th,
       td {
         border: 1px solid rgb(19, 19, 25);
-       }
+      }
+    </style>
+    <style>
+      h3 {
+        color: brown;
+        background-color: rgb(241, 194, 65);
+      }
     </style>
   </head>
   <body>
