--- a/hobbies.html
+++ b/hobbies.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <title>Hobbies</title>
+    <style>
+      h3 {
+        color: brown;
+        background-color: rgb(241, 194, 65);
+      }
+    </style>
   </head>
   <body>
     <h3>My Hobbies</h3>
