--- a/techStack.html
+++ b/techStack.html
@@ -10,10 +10,16 @@
         border: 1px solid rgb(19, 19, 25);
       }
     </style>
+    <style>
+      h3 {
+        color: brown;
+        background-color: rgb(241, 194, 65);
+      }
+    </style>
   </head>
   <body>
     <!-- <h3>Technology Stack for Angular Web Development</h3> -->
-    <h3>Technology </h3>
+    <h3>Technology</h3>
     <table>
       <thead></thead>
       <tbody>
