modified personal with css
modified personal with css

--- a/internalCss.html
+++ b/internalCss.html
@@ -38,7 +38,7 @@
     <hr />
     <h2 class="carieerObjective">Professional Summary</h2>
     <p>
-      &nbsp; &nbsp; &nbsp; &nbsp; Experience in using Chrome Developer Tool for
+      &nbsp; &nbsp; &nbsp; &nbsp; Experience <span id="Objectives">using Chrome Developer Tool </span>in  for
       debugging and Troubleshooting the code <br />
       &nbsp; &nbsp; &nbsp; &nbsp; Knowledge of NodeJS <br />
       &nbsp; &nbsp; &nbsp; &nbsp; Ability to work with people at all levels in
