--- a/personal.html
+++ b/personal.html
@@ -1,29 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Personal Information</title>
-    <style>
-      h3 {
-        color: brown;
-        background-color: rgb(241, 194, 65);
-      }
-    </style>
-  </head>
-  <body>
-    <h3>Personal Information:</h3>
-    <br /><img src="developerWomen.png" width="250px" height="200px" />
-    <br /><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <strong>Ms.Rajeshri Mane</strong> <br /><br /><strong>Mobile Number:</strong
-    >&nbsp;9876543210 <br /><strong> Email: </strong
-    >&nbsp;manerajeshri@gmail.com <br /><strong> Date of Birth:</strong
-    >&nbsp;Feb-10-1989 <br /><strong> Address:</strong>&nbsp;Punawale, Pune
-    <br />
-    <details>
-      <summary><strong>Family Details</strong></summary>
-      <ul>
-        <li>Father Name:&nbsp;Mr.Prakash Mane</li>
-        <li>Mother Name:&nbsp;Ms.Pramila Mane</li>
-      </ul>
-    </details>
-  </body>
+
+<head>
+  <title>Personal Information</title>
+  <style>
+    h3 {
+      color: rgb(165, 42, 42);
+      background-color: rgb(241, 194, 65);
+    }
+
+    .large {
+      font-size: large;
+    }
+
+    .body {
+      color: rgb(68, 117, 119);
+      text-transform: uppercase;
+    }
+  </style>
+</head>
+
+<body>
+  <h3>Personal Information</h3>
+  <strong class="body large">Profile Photo:</strong>
+  <br /><img src="developerWomen.png" width="250px" height="200px" />
+  <br /><strong class="large">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Ms.Rajeshri
+    Mane</strong><br>
+  <br /><strong class="body large">Mobile Number:</strong><strong class="large">9876543210</strong>
+  <br /><strong class="body large">Email:</strong><strong class="large">manerajeshri@gmail.com</strong>
+  <br /><strong class="body large">Date of Birth:</strong><strong class="large">Feb-10-1989</strong>
+  <br /><strong class="body large">Address:</strong><strong class="large">Punawale, Pune</strong>
+
+  <details class="large">
+    <summary><strong class="body large"> Family Details</strong></summary>
+    <ul>
+      <li><strong>Father Name : Mr.Prakash Mane</strong></li>
+      <li><strong>Mother Name : Ms.Pramila Mane</strong></li>
+    </ul>
+  </details>
+</body>
+
 </html>
