--- a/personal.html
+++ b/personal.html
@@ -9,11 +9,11 @@
       background-color: rgb(241, 194, 65);
     }
 
-    .large {
+    body {
       font-size: large;
     }
 
-    .body {
+    .upper {
       color: rgb(68, 117, 119);
       text-transform: uppercase;
     }
@@ -22,17 +22,18 @@
 
 <body>
   <h3>Personal Information</h3>
-  <strong class="body large">Profile Photo:</strong>
-  <br /><img src="developerWomen.png" width="250px" height="200px" />
-  <br /><strong class="large">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Ms.Rajeshri
-    Mane</strong><br>
-  <br /><strong class="body large">Mobile Number:</strong><strong class="large">9876543210</strong>
-  <br /><strong class="body large">Email:</strong><strong class="large">manerajeshri@gmail.com</strong>
-  <br /><strong class="body large">Date of Birth:</strong><strong class="large">Feb-10-1989</strong>
-  <br /><strong class="body large">Address:</strong><strong class="large">Punawale, Pune</strong>
+  <strong class="upper">Profile Photo:</strong>
+  <br /><img src="developerWomen.png" width="200px" height="200px" />
+  <br /><strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Ms. Rajeshri Mane</strong>
+  <br />
+  <br /><strong class="upper">Mobile Number:</strong>
+  <strong>9876543210</strong> <br /><strong class="upper">Email:</strong>
+  <strong>manerajeshri@gmail.com</strong> <br /><strong class="upper">Date of Birth:</strong>
+  <strong>Feb-10-1989</strong> <br /><strong class="upper">Address:</strong>
+  <strong>Punawale, Pune</strong>
 
-  <details class="large">
-    <summary><strong class="body large"> Family Details</strong></summary>
+  <details>
+    <summary><strong class="upper"> Family Details</strong></summary>
     <ul>
       <li><strong>Father Name : Mr.Prakash Mane</strong></li>
       <li><strong>Mother Name : Ms.Pramila Mane</strong></li>
