--- a/internalCss.html
+++ b/internalCss.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>Internal CSS</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
     <style>
       /* h2 { } for all header */
       /* id selector #IdName */
@@ -18,7 +21,7 @@
         font-size: x-large;
         text-transform: capitalize;
         font-weight: bolder;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-family: 'Sofia', cursive;
       }
     </style>
   </head>
@@ -44,5 +47,6 @@
       &nbsp; &nbsp; &nbsp; &nbsp; Ability to work with people at all levels in
       the program
     </p>
+    <h3>This is heading 3</h3>
   </body>
 </html>
