--- a/index.html
+++ b/index.html
@@ -1,77 +1,60 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Index</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <style>
-      h3 {
-        color: brown;
-        background-color: rgb(241, 194, 65);
-      }
-    </style>
-  </head>
 
-  <body>
-    <header style="color: brown; background-color: rgb(241, 194, 65)">
-      <i class="fa fa-user" aria-hidden="true" style="font-size: 20px"> </i>
-      Ms.Rajeshri Mane &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <i class="fa fa-phone-square" aria-hidden="true" style="font-size: 20px">
-      </i>
-      9876 5432 10 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <i class="fa fa-envelope" aria-hidden="true" style="font-size: 20px"> </i>
-      manerajeshri@gmail.com
-    </header>
-    <br />
+<head>
+  <title>Index</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <style>
+    h3 {
+      color: brown;
+      background-color: rgb(241, 194, 65);
+    }
 
-    <nav>
-      <a href="home.html" target="MyFrame">HOME</a> &nbsp;&nbsp;
-      <a href="techStack.html" target="MyFrame">TECHNOLOGY</a> &nbsp;&nbsp;
-      <a href="education.html" target="MyFrame">EDUCATION </a> &nbsp;&nbsp;
-      <a href="projectDetails.html" target="MyFrame"> PROJECT</a> &nbsp;&nbsp;
-      <a href="hobbies.html" target="MyFrame"> HOBBIES</a> &nbsp;&nbsp;
-      <a href="personal.html" target="MyFrame"> PERSONAL</a> &nbsp;&nbsp;
-      <a href="contactUs.html" target="MyFrame"> CONTACT US</a> &nbsp;&nbsp;
-    </nav>
+    span,
+    a {
+      margin-right: 30px;
+    }
+  </style>
+</head>
 
-    <br />
-    <iframe width="900px" height="500px" name="MyFrame" src="home.html">
-    </iframe>
-    <br />
+<body>
+  <header style="color: brown; background-color: rgb(241, 194, 65)">
+    <span><i class="fa fa-user" aria-hidden="true" style="font-size: 20px"></i> Ms.Rajeshri Mane</span>
+    <span><i class="fa fa-phone-square" aria-hidden="true" style="font-size: 20px"></i> 9876 5432 10 </span>
+    <i class="fa fa-envelope" aria-hidden="true" style="font-size: 20px"></i> manerajeshri@gmail.com
+  </header>
+  <br />
 
-    <footer>
-      Follow Me &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="https://www.linkedin.com/"
-        ><i
-          class="fa fa-linkedin-square"
-          aria-hidden="true"
-          style="font-size: 20px"
-        >
-        </i
-      ></a>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <nav>
+    <a href="home.html" target="MyFrame">HOME</a>
+    <a href="techStack.html" target="MyFrame">TECHNOLOGY</a>
+    <a href="education.html" target="MyFrame">EDUCATION </a>
+    <a href="projectDetails.html" target="MyFrame"> PROJECT</a>
+    <a href="hobbies.html" target="MyFrame"> HOBBIES</a>
+    <a href="personal.html" target="MyFrame"> PERSONAL</a>
+    <a href="contactUs.html" target="MyFrame"> CONTACT US</a>
+  </nav>
 
-      <a href="https://www.google.co.in/">
-        <i class="fa fa-google" aria-hidden="true" style="font-size: 20px"></i
-      ></a>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="https://www.instagram.com/accounts/login/">
-        <i
-          class="fa fa-instagram"
-          aria-hidden="true"
-          style="font-size: 20px"
-        ></i
-      ></a>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="https://www.facebook.com/login/">
-        <i
-          class="fa fa-facebook-square"
-          aria-hidden="true"
-          style="font-size: 20px"
-        ></i
-      ></a>
-    </footer>
-  </body>
+  <br />
+  <iframe width="900px" height="500px" name="MyFrame" src="home.html">
+  </iframe>
+  <br />
+
+  <footer>
+    <span>Follow Me</span>
+    <a href="https://www.linkedin.com/"><i class="fa fa-linkedin-square" aria-hidden="true" style="font-size: 20px">
+      </i></a>
+
+
+    <a href="https://www.google.co.in/">
+      <i class="fa fa-google" aria-hidden="true" style="font-size: 20px"></i></a>
+
+    <a href="https://www.instagram.com/accounts/login/">
+      <i class="fa fa-instagram" aria-hidden="true" style="font-size: 20px"></i></a>
+
+    <a href="https://www.facebook.com/login/">
+      <i class="fa fa-facebook-square" aria-hidden="true" style="font-size: 20px"></i></a>
+  </footer>
+</body>
+
 </html>
