--- a/techStack.html
+++ b/techStack.html
@@ -3,19 +3,21 @@
   <head>
     <title>Technology Stack for Angular Web Development</title>
     <style>
+       h3 {
+        color: brown;
+        background-color: rgb(241, 194, 65);
+      }
       table,
       tr,
       th,
       td {
         border: 1px solid rgb(19, 19, 25);
       }
-    </style>
-    <style>
-      h3 {
-        color: brown;
-        background-color: rgb(241, 194, 65);
+      td,th {
+        padding:5px;
       }
     </style>
+     
   </head>
   <body>
     <!-- <h3>Technology Stack for Angular Web Development</h3> -->
