--- a/techStack.html
+++ b/techStack.html
@@ -3,22 +3,25 @@
   <head>
     <title>Technology Stack for Angular Web Development</title>
     <style>
-       h3 {
+      h3 {
         color: brown;
         background-color: rgb(241, 194, 65);
       }
+
       table,
       tr,
       th,
       td {
         border: 1px solid rgb(19, 19, 25);
       }
-      td,th {
-        padding:5px;
+
+      td,
+      th {
+        padding: 5px;
       }
     </style>
-     
   </head>
+
   <body>
     <!-- <h3>Technology Stack for Angular Web Development</h3> -->
     <h3>Technology</h3>
@@ -26,7 +29,9 @@
       <thead></thead>
       <tbody>
         <tr>
-          <td rowspan="5"><bold>Technology</bold></td>
+          <td rowspan="5">
+            <bold>Technology</bold>
+          </td>
           <td>HTML5+CSS</td>
         </tr>
         <tr>
@@ -42,7 +47,9 @@
           <td>Angular</td>
         </tr>
         <tr>
-          <td rowspan="2"><bold>Tools</bold></td>
+          <td rowspan="2">
+            <bold>Tools</bold>
+          </td>
           <td>GIT + GitHub</td>
         </tr>
         <tr>
