--- a/education.html
+++ b/education.html
@@ -3,20 +3,29 @@
   <head>
     <title>Education</title>
     <style>
+      h3 {
+        color: brown;
+        background-color: rgb(241, 194, 65);
+      }
+
       table,
       tr,
       th,
       td {
         border: 1px solid rgb(19, 19, 25);
       }
-    </style>
-    <style>
-      h3 {
-        color: brown;
-        background-color: rgb(241, 194, 65);
+
+      td,
+      th {
+        padding: 5px;
+      }
+
+      table {
+        margin-right: 80px;
       }
     </style>
   </head>
+
   <body>
     <h3>Education</h3>
     <table>
