--- a/hobbies.html
+++ b/hobbies.html
@@ -7,8 +7,12 @@
         color: brown;
         background-color: rgb(241, 194, 65);
       }
+      li{
+        margin-bottom: 15px;
+      }
     </style>
   </head>
+
   <body>
     <h3>My Hobbies</h3>
 
