--- a/personal.html
+++ b/personal.html
@@ -17,6 +17,9 @@
       color: rgb(68, 117, 119);
       text-transform: uppercase;
     }
+    span{
+      margin-left: 30px;
+    }
   </style>
 </head>
 
@@ -24,7 +27,7 @@
   <h3>Personal Information</h3>
   <strong class="upper">Profile Photo:</strong>
   <br /><img src="developerWomen.png" width="200px" height="200px" />
-  <br /><strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Ms. Rajeshri Mane</strong>
+  <br /><span><strong>Ms. Rajeshri Mane</strong></span>
   <br />
   <br /><strong class="upper">Mobile Number:</strong>
   <strong>9876543210</strong> <br /><strong class="upper">Email:</strong>
