removed nbsp added padding
removed nbsp added padding

--- a/projectDetails.html
+++ b/projectDetails.html
@@ -7,6 +7,9 @@
       color: brown; 
       background-color: rgb(241, 194, 65)
     }
+    li{
+      padding-top: 5px;
+    }
   </style>
 </head>
 
@@ -20,18 +23,19 @@
 <br> <br>
 <b>Team Size:</b>07  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>Duration: </b><i>2021-1<sup>st</sup> -Juy till <u> present </u> </i>
 <br> <br>
-<b>Project Description:</b>This project is mainly used for student management in colleges, where It help to manage student record like<br> student registration, student update information and to see all his or her academic activities like score card, attendance. <br> 
+<b>Project Description:</b>This project is mainly used for student management in colleges, where It help to manage student record like student registration, student update information and to see all his or her academic activities like score card, attendance. <br> 
 <hr>
 
 <h3>Roles and Responsibilities:  </h3>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Designed and implemented the user interface using HTML5 and CSS
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Work closely with backend developers for code integration
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Identifying and troubleshooting issues with front end code
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Worked on GIT as a version control
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Used JIRA for bug tracking
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Implemented project using Agile SCRUM methodology, Involved in daily stand up meetings, sprint showcase and sprint retrospective
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Involved in fixing technical issues
-<br>
+<ul>
+  <li>Designed and implemented the user interface using HTML5 and CSS</li>
+  <li>Work closely with backend developers for code integration</li>
+  <li>Identifying and troubleshooting issues with front end code</li>
+  <li>Worked on GIT as a version control</li>
+  <li>Used JIRA for bug tracking</li>
+  <li>Implemented project using Agile SCRUM methodology, Involved in daily stand up meetings, sprint showcase and sprint retrospective</li>
+  <li>Involved in fixing technical issues</li>
+</ul>
 <hr>
 </p>  
 </body>
