--- a/index.html
+++ b/index.html
@@ -4,16 +4,30 @@
 <head>
   <title>Index</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap"
+    rel="stylesheet"/>
+
   <style>
+    *{
+      font-family: 'Josefin Sans', sans-serif;
+    }
     h3 {
       color: brown;
-      background-color: rgb(241, 194, 65);
+      background-color: rgb(255, 205, 68);
     }
-
-    span,
-    a {
+    span {
       margin-right: 30px;
     }
+    a {
+      margin-right: 30px;
+      color: hsl(4, 100%, 56%);
+      
+    }
+    body{
+          background-image:url(cover1.jpg);
+          background-size: cover;
+        }
   </style>
 </head>
 
