--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     *{
       font-family: 'Josefin Sans', sans-serif;
     }
-    h3 {
+    h3,marquee {
       color: brown;
       background-color: rgb(255, 205, 68);
+      text-shadow: 5px 4px 8px;
     }
     span {
       margin-right: 30px;
@@ -48,9 +49,9 @@
     <a href="personal.html" target="MyFrame"> PERSONAL</a>
     <a href="contactUs.html" target="MyFrame"> CONTACT US</a>
   </nav>
-
-  <br />
-  <iframe width="900px" height="500px" name="MyFrame" src="home.html">
+<marquee> <h2>WELCOME TO MY PROFILE!!!</h2></marquee>
+  
+    <iframe width="900px" height="500px" name="MyFrame" src="home.html"></iframe>
   </iframe>
   <br />
 
