--- a/home.html
+++ b/home.html
@@ -11,7 +11,14 @@
       /* margin-bottom: 20px; */
       padding-bottom: 15px;
     }
+    li::marker{
+      color: brown;
+    }
+    li::selection{
+      color: blue;
+    }
   </style>
+
 </head>
 
 <body>
