--- a/internalCss.html
+++ b/internalCss.html
@@ -66,6 +66,9 @@ list-style:square;
         h1{
           text-shadow: 5px 4px 8px;
         }
+        .carieerObjective::selection{
+          color: blueviolet;
+        }
 
     </style>
   </head>
