--- a/a7empApplictionForm.html
+++ b/a7empApplictionForm.html
@@ -6,7 +6,8 @@
       label{
         color: blue;
       }
-      input[type="text"],input[type="number"]e{
+      /* Attribute selector */
+      input[type="text"],input[type="number"]{
         color: brown;
         border:1px solid red ;
         border-radius: 10px;
@@ -14,11 +15,12 @@
         height: 25px;
         text-transform: capitalize;
       }
+      /* pseudo Class Selectror */
       h2:hover{
         color: blue;
         background-color: aqua;
       }
-                
+      /* pseudo Class Selectror */       
       input[type="submit"]:hover{
         color: red;
         border-radius: 10px;
@@ -26,6 +28,7 @@
         width: 80px;
         height: 25px;
       }
+      /* pseudo Class Selectror */
       input[type="reset"]:hover{
         color: red;
         border-radius: 10px;
@@ -36,6 +39,7 @@
       button:hover{
         color: red;
       }
+      /* pseudo Element Selectror */
       h2::after{content: " hi";     
       }
     </style>
