--- a/home.html
+++ b/home.html
@@ -12,10 +12,10 @@
       padding-bottom: 15px;
     }
     li::marker{
-      color: brown;
+      color: rgb(136, 165, 42);
     }
     li::selection{
-      color: blue;
+      color: rgb(255, 0, 0);
     }
   </style>
 
