--- a/internalCss.html
+++ b/internalCss.html
@@ -56,8 +56,9 @@
         /* if we have multiple list then use id class name selector
         then dont use comma */
        ul li{
-padding: 5px;
-list-style:square;
+        color: aqua;
+padding: 50px;
+list-style-type: disc;
         }
         #listbullet li{
           padding: 5px;
@@ -161,5 +162,7 @@ list-style:square;
   <h1>hi hi hi hi</h1>
 </marquee>
 
+
+<button style="height: 30px; width: 150px; border-radius: 15px; color: blueviolet; background-color: aqua;">Hiiiiiii</button>
   </body>
 </html>
