--- a/positioning.html
+++ b/positioning.html
@@ -9,8 +9,8 @@
             width: 150px;
             height: 150px;
             background-color: darkgrey;
-            /* position: static;
-            left:100px;
+            /* position: static; */
+            /* left:100px;
             right: 300px;
             top: 300px;
             bottom: 300px; */
