--- a/education.html
+++ b/education.html
@@ -7,7 +7,7 @@
         color: brown;
         background-color: rgb(241, 194, 65);
       }
-
+      /* multiple selector with shorthand  */
       table,
       tr,
       th,
@@ -22,6 +22,7 @@
 
       table {
         margin-right: 80px;
+        margin-left: 50px;
       }
     </style>
   </head>
